--- a/frontend/src/app/pages/mobile/login/login.component.html
+++ b/frontend/src/app/pages/mobile/login/login.component.html
@@ -11,7 +11,7 @@
                 [ngClass]="(i==selectedavatarindex)?'selected':''" (click)="selectedavatar(i)" class="avatar"> <img
                     src="/assets/players/mobile_player{{number}}.png" alt="Avatar{{number}}"></div>
         </div>
-        <div style="display:flex;justify-content: center;">
+        <div  >
             <button id="confirm" (click)="addUser()" type="button" value=""></button>
         </div>
 
