--- a/frontend/src/app/pages/mobile/mainpage/mainpage.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/mainpage.component.scss
@@ -1,6 +1,6 @@
 .background {
-  min-height: calc(100vh - 48px);
-  height: auto;
+  // min-height: calc(100vh - 48px);
+  height: 100%;
   margin: 0;
 }
 .mat-tab-body-wrapper{
