--- a/frontend/src/app/pages/mobile/login/login.component.scss
+++ b/frontend/src/app/pages/mobile/login/login.component.scss
@@ -4,7 +4,7 @@
   font-weight: normal;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   line-height: 45px;
   font-size: 24px;
@@ -22,7 +22,8 @@
   color: white;
   background: #E74C3C;
   border-radius: 10px;
-  padding: 0 12px 5px;
+  padding: 0 12px;
+  font-family: auto;
   border: none;
   vertical-align: middle;
   outline: none;
