--- a/frontend/src/app/pages/signin-table/signin-table.component.scss
+++ b/frontend/src/app/pages/signin-table/signin-table.component.scss
@@ -33,6 +33,17 @@
   height: 690px;
 }
 
+.gameStart {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 1em;
+  margin: auto;
+  width: 486px;
+  height: 341px;
+}
+
 .addPlayer {
   position: absolute;
   width: 115px;
