Wall's timeline now changes with events

--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -13,12 +13,12 @@
     </div>
     <div id="narrator_title" [ngStyle]="{display:(lap == 0)?'block':'none'}">Select Narrator:</div>
   </div>
-  <div class="button_container row">
+  <div class="button_container row" [ngStyle]="{'margin-top':(lap != 0)?'6%':'0%'}">
     <div class="butt plyr_butt" [ngStyle]="{display:(lap == 0)?'block':'none'}">
       <img id="player_icon" src="/assets/interactive-wall/player_icon.png" alt="player icon">
       <p>Player</p>
     </div>
-    <div class="butt spkr_butt" (click)="manualChange();" [ngStyle]="{'margin-top':(lap != 0)?'6%':'0%'}"
+    <div class="butt spkr_butt" (click)="speakerSelected();" [ngStyle]="{display:(1 >= lap)?'block':'none'}"
       [ngStyle]="{opacity:(lap != 0)?'1':'0.6'}">
       <img id="speaker" src="/assets/interactive-wall/speaker.png" alt="speaker icon">
       <p>Speaker</p>
