--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -5,15 +5,19 @@
     <div class="column timeline" [ngStyle]="{display:(lap > 1)?'block':'none'}">
       <img class="game_start" src="/assets/interactive-wall/game_start.png" alt="game start">
       <div *ngFor="let phase of phases; let i=index" style="height: 175px;">
-        <div class="row">
-          <img class="circle"
-            [attr.src]="(phases[i] == 'Day')? '/assets/interactive-wall/circle_day.png' : '/assets/interactive-wall/circle_night.png'"
-            alt="circle">
-          <div id="day_txt" [ngStyle]="{display:(lap > 1)?'block':'none'}">{{phases[i]}} {{phases_num}}</div>
-          <div *ngFor="let suspect of suspects_pngs; let i=index" class="row suspects">
+        <div class="timelineRow">
+          <div class="circleAndText">
+            <img class="circle"
+              [attr.src]="(phases[i] == 'Day')? '/assets/interactive-wall/circle_day.png' : '/assets/interactive-wall/circle_night.png'"
+              alt="circle">
+            <div id="day_txt" [ngStyle]="{display:(lap > 1)?'block':'none'}">{{phases[i]}} {{phases_num}}</div>
+          </div>
+          <div *ngFor="let suspect of suspects_pngs; let i=index" class="suspects">
             <img class="suspect" src="/assets/interactive-wall/{{suspect}}" alt="avatar of suspect">
-            <div *ngFor="let voter of voters_pngs[suspect]; let i=index">
-              <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
+            <div id="voters">
+              <div *ngFor="let voter of voters_pngs.get(suspect); let i=index">
+                <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
+              </div>
             </div>
           </div>
         </div>
