--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -7,7 +7,7 @@
                 <div class="flip-card-inner" (click)="toggleflip(i)" [ngClass]="flips[i] ? 'flip' : ''">
                     <div class="flip-card-front">
                         <img class="avatar" src="/assets/players/mobile_{{player.avatar_path}}">
-                        <div class="playername">{{player.name}}</div>
+                        <div class="playername">{{player.name}}<span *ngIf="i==0" style="opacity: 0.5;"><br>(You)</span></div>
                     </div>
                     <div class="flip-card-back">
                         <div class="myrow">
