mainpage.component line 98
some more changes to work

--- a/frontend/src/app/pages/homescreen-tv/homescreen-tv.component.html
+++ b/frontend/src/app/pages/homescreen-tv/homescreen-tv.component.html
@@ -1,5 +1,5 @@
 <div id="background">
-    <div id="bats"></div>
+    <div id="bats" (click)="manualChange()"></div>
     <div id="playersjoined">{{playersjoined}} Players have Joined</div>
     
     <div id="title">Mafia The Game</div>
